--- a/main.css
+++ b/main.css
@@ -1,20 +1,291 @@
+@font-face {
+  font-family: "Titillium";
+  src: url("http://aspx.sc.chinaz.com/query.aspx?keyword=Titillium");
+}
+
 body {
-    background-color: black;
-    width: 95%;
-    margin: auto;
+  background-color: black;
+  width: 95%;
+  margin: auto;
+  font-family: "Titillium";
 }
 
 .header {
-    background: url('素材/starfield-banner.jpg ');
-    position: fixed;
-    width: 95%;
-}
-
-.header .logo-link {
-    padding: 10px;
+  background: url('images/starfield-banner.jpg');
+  position: fixed;
+  width: 95%;
 }
 
 .header .logo {
-    width:110px;
-    margin:11px;
+  margin: 11px;
+  width: 110px;
+}
+
+.nav {
+  float: right;
+  width: 1270px;
+}
+
+.header .logo-link {
+  margin-left: -4px;
+  padding: 10px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  border-right: 1px solid white;
+}
+
+.link1 {
+  margin-top: 30px;
+  margin-left: 125px;
+  font-size: 20px;
+}
+
+.link2 {
+  margin-top: 30px;
+}
+
+.link-down {
+  background-color: #666;
+}
+
+.link-last {
+  margin-left: -4px;
+  padding: 10px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  border-right: 1px solid transparent;
+}
+
+.search {
+  float: right;
+  background-color: #444;
+}
+
+.search-text {
+  float: left;
+  margin-left: 10px;
+  width: 110px;
+  height: 30px;
+  color: #ddd;
+  border: none;
+  background-color: transparent;
+}
+
+.search-img {
+  float: left;
+  width: 30px;
+  height: 30px;
+}
+
+.share {
+  float: right;
+  width: 30px;
+  height: 30px;
+}
+
+.section {
+  position: relative;
+  z-index: -1;
+  top: 130px;
+}
+
+.model {
+  display: flex;
+  align-items: flex-end;
+}
+
+.img-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.label {
+  color: white;
+}
+
+.label>span {
+  padding: 10px;
+  background-color: rgba(84, 108, 152, 0.8);
+}
+
+.img-desc {
+  margin-top: 10px;
+  margin-bottom: 0;
+  padding: 5px;
+  font-size: 18px;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.sec1 {
+  display: flex;
+  height: 615px;
+}
+
+.sec1-left {
+  flex: 1;
+  background-image: url("images/pia21924-16.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.sec1-right {
+  flex: 1;
+  margin-left: 15px;
+}
+
+.sec1-up {
+  display: flex;
+  justify-content: space-between;
+  height: 300px;
+  margin-bottom: 15px;
+}
+
+.sec1-up-left {
+  width: 343px;
+  background-image: url("images/mollweide_cycle.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.sec1-up-right {
+  padding: 3px 7px;
+  width: 343px;
+  background-color: rgba(57, 113, 158, 0.5);
+}
+
+.sec1-up-right>h4 {
+  margin: 0 7px 3px 7px;
+  padding: 8px 0 6px;
+  color: #fff;
+  font-size: 14px;
+  border-bottom: 1px solid white;
+}
+
+.sec1-up-right>a {
+  display: block;
+  margin-bottom: 10px;
+  color: #fff;
+  text-align: justify;
+  word-wrap: break-word;
+  text-decoration: none;
+}
+
+.sec1-up-right>div {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 122px;
+  color: white;
+  border-top: 1px solid white;
+}
+
+.sec1-up-right>div>a {
+  color: white;
+  text-decoration: none;
+}
+
+.sec1-down {
+  height: 300px;
+  background-image: url("images/s69-39961.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.sec2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 15px;
+}
+
+.sec2-left {
+  width: 348px;
+  height: 300px;
+  background-image: url("images/ssc2017-14a1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.sec2-center {
+  width: 716px;
+  height: 300px;
+  background-image: url("images/pia22556-16.gif");
+  background-repeat: no-repeat;
+}
+
+.sec2-right {
+  width: 348px;
+  height: 300px;
+  background-image: url("images/s69-39961.jpg");
+  background-repeat: no-repeat;
+}
+
+.sec3 {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 15px;
+}
+
+.sec3-content {
+  width: 348px;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.sec3-content1 {
+  background-image: url("images/nasa_logo.png");
+}
+
+.sec3-content2 {
+  background-image: url("images/io-home.gif");
+}
+
+.sec3-content3 {
+  background-image: url("images/cassini20170809.jpg");
+}
+
+.sec3-content4 {
+  background-image: url("images/fermiicecube_as.jpg");
+}
+
+.sec4 {
+  margin: 15px 0 0;
+  padding: 8px 7.5px 15px;
+  color: white;
+  font-size: 17px;
+  background-color: #15418c;
+  text-align: center;
+}
+
+.footer {
+  padding: 17.5px 9.8px 42px;
+  font-size: 14px;
+}
+
+.footer-logo {
+  float: left;
+  width: 80px;
+  height: 67px;
+}
+
+.footer>span {
+  color: white;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.footer-links>li {
+  padding: 0 0 0 30px;
+  color: #5d7fb9;
+  list-style-type: none;
 }
